# zotero-cli

./: .gitignore  AGENTS.md  Cargo.toml  MIGRATION.md  README.md  README.zh-CN.md  justfile
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  deploy-docs.yml
docs/: index.md  package-lock.json  package.json
docs/.vitepress/: config.ts
docs/cli/: collection.md  config.md  item.md  library.md  overview.md  sync-mcp.md  troubleshooting.md  workspace.md
docs/en/: index.md
docs/en/cli/: collection.md  config.md  item.md  library.md  overview.md  sync-mcp.md  troubleshooting.md  workspace.md
docs/en/guide/: getting-started.md  migrating-from-ref-zotagent.md  migrating-from-ref-zotero-cli.md
docs/en/skills/: agent-usage.md  fallback.md  overview.md  routing.md  safety.md  workflows.md
docs/guide/: getting-started.md  migrating-from-ref-zotagent.md  migrating-from-ref-zotero-cli.md
docs/skills/: agent-usage.md  examples.md  fallback.md  overview.md  routing.md  safety.md  workflows.md
docs/skills/examples/: llm-foundationmodels-collection-summary.md  review-llm-in-time-series.md
skills/zot-skills/: SKILL.md  test-prompts.json
skills/zot-skills/evals/: evals.json
src/zot-cli/: Cargo.toml
src/zot-cli/src/: cli.rs  context.rs  format.rs  main.rs  util.rs
src/zot-cli/src/cli/: args.rs
src/zot-cli/src/commands/: collection.rs  config.rs  doctor.rs  library.rs  mcp.rs  mod.rs  sync.rs  workspace.rs
src/zot-cli/src/commands/item/: annotation.rs  merge.rs  mod.rs  note.rs  read.rs  scite.rs  tag.rs  write.rs
src/zot-cli/tests/: workspace_version_guard.rs
src/zot-core/: Cargo.toml
src/zot-core/src/: config.rs  envelope.rs  error.rs  lib.rs  model.rs
src/zot-local/: Cargo.toml
src/zot-local/src/: citation.rs  db.rs  lib.rs  pdf.rs  semantic.rs  workspace.rs
src/zot-local/tests/: search_regression.rs  semantic_index.rs
src/zot-local/tests/fixtures/: zotero.sqlite
src/zot-remote/: Cargo.toml
src/zot-remote/src/: better_bibtex.rs  embedding.rs  http.rs  lib.rs  oa.rs  scite.rs  semantic_scholar.rs  zotero.rs
