[workspace]
members = [
    "src/zot-core",
    "src/zot-local",
    "src/zot-remote",
    "src/zot-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["OpenAI Codex"]
repository = "https://example.invalid/zot"
rust-version = "1.85"

[workspace.dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.6.0", features = ["derive", "env", "unicode"] }
dirs = "6.0.0"
http = "1.3.1"
md5 = "0.8.0"
once_cell = "1.21.3"
pdfium-render = "0.9.0"
rand = "0.9.2"
regex = "1.12.2"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "multipart", "rustls", "stream"] }
rmcp = { version = "1.4.0", features = ["macros", "server", "transport-io"] }
rusqlite = { version = "0.37.0", features = ["bundled", "chrono"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
strsim = "0.11.1"
tempfile = "3.23.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"
urlencoding = "2.1.3"
uuid = { version = "1.18.1", features = ["v4", "serde"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"
