[workspace]
members = ["src/zot-core", "src/zot-local", "src/zot-remote", "src/zot-cli"]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2024"
license = "MIT"
authors = ["bahayonghang"]
repository = "https://github.com/bahayonghang/zotero-cli"
rust-version = "1.85"

[workspace.dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive", "env", "unicode"] }
clap_complete = "4.6.1"
dirs = "6.0.0"
http = "1.3.1"
md5 = "0.8.0"
once_cell = "1.21.3"
opener = "0.8.4"
pdfium-render = "0.9.0"
rand = "0.10.1"
regex = "1.12.2"
reqwest = { version = "0.13.2", default-features = false, features = [
    "json",
    "multipart",
    "rustls",
    "stream",
] }
rmcp = { version = "1.5.0", features = ["macros", "server", "transport-io"] }
rusqlite = { version = "0.39.0", features = ["bundled", "chrono"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
strsim = "0.11.1"
tempfile = "3.23.0"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["full"] }
toml = "1.1.2"
urlencoding = "2.1.3"
uuid = { version = "1.23.1", features = ["v4", "serde"] }
zot-core = { path = "src/zot-core" }
zot-local = { path = "src/zot-local" }
zot-remote = { path = "src/zot-remote" }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"
