[package]
name = "zot-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "zot"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
dirs.workspace = true
regex.workspace = true
reqwest.workspace = true
rmcp.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
uuid.workspace = true
zot-core = { path = "../zot-core" }
zot-local = { path = "../zot-local" }
zot-remote = { path = "../zot-remote" }
