[package]
name = "zot-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "The Rust-first Zotero CLI for researchers, terminal-lovers, and AI agents."

[[bin]]
name = "zot"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
dirs.workspace = true
opener.workspace = true
regex.workspace = true
reqwest.workspace = true
rmcp.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
uuid.workspace = true
zot-core = { version = "0.1.0", path = "../zot-core" }
zot-local = { version = "0.1.0", path = "../zot-local" }
zot-remote = { version = "0.1.0", path = "../zot-remote" }
