[package]
name = "zot-local"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
chrono.workspace = true
md5.workspace = true
pdfium-render.workspace = true
regex.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
strsim.workspace = true
tempfile.workspace = true
thiserror.workspace = true
toml.workspace = true
zot-core = { path = "../zot-core" }
