[package]
name = "zot-local"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Local Zotero SQLite, PDF, and workspace support for zot."

[dependencies]
chrono.workspace = true
md5.workspace = true
pdfium-render.workspace = true
regex.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
strsim.workspace = true
tempfile.workspace = true
thiserror.workspace = true
toml.workspace = true
zot-core = { version = "0.1.0", path = "../zot-core" }
