[package]
name = "zot-local"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Local Zotero SQLite, PDF, and workspace support for zot."

[dependencies]
chrono.workspace = true
dirs.workspace = true
flate2.workspace = true
md5.workspace = true
pdfium-render.workspace = true
regex.workspace = true
reqwest = { workspace = true, features = ["blocking"] }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
strsim.workspace = true
tar.workspace = true
tempfile.workspace = true
thiserror.workspace = true
toml.workspace = true
zot-core.workspace = true
