[package]
name = "zot-remote"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Remote Zotero Web API, enrichment, and embedding support for zot."

[dependencies]
chrono.workspace = true
md5.workspace = true
once_cell.workspace = true
regex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
urlencoding.workspace = true
uuid.workspace = true
zot-core = { version = "0.1.0", path = "../zot-core" }
